...
        android:id="@+id/questionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
...
            android:text="@string/stop"
            android:textColor="#FFF8E1"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintStart_toEndOf="@+id/pauseBtn" />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/proRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:max="5"
            android:numStars="5"
            android:rating="@{quizQuestion.rating}"
...
