...
        android:gravity="center"
        android:text="@string/your_top_category_is"
        android:textColor="@color/orange"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFB74D"
        android:padding="8dp"
        android:textColor="#FFF8E1" />

...
